# Toy

./: .cursorrules  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .windsurfrules  Dockerfile  Makefile  README.md  coverage.json  docker-compose.yml  mault-solo-merge.sh  mault-verify-initialize.sh  mault-verify-step1.sh  mault-verify-step2.sh  mault-verify-step3.sh  mault-verify-step4.sh  mault-verify-step5.sh  mault-verify-step6.sh  mault-verify-step7.sh  mault-verify-step8.sh  mault-verify-step9.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  mault-governance-gate.yml
.mault/: canary-log.json
.memory-layer/baselines/: code-health-baseline.json  coverage-baseline.json  coverage.json  guardrails-baseline.json  mock-tax.json  type-holes.json  type-safety.json
docs/: mault.yaml
docs/guides/: MAULT-AI-CODER-GUIDE.md
scripts/governance/: check_circular_deps.py  check_coverage_ratchet.py  check_hallucinations_pypi.py  check_integration_pairing.py  check_mock_conformance.py  check_mock_tax.py  check_mutation_score.py  check_noqa.py  check_per_file_baseline.py  check_pydantic_boundaries.py  check_security_critical.py  check_silent_catches.py  check_skipped_tests.py  check_type_holes.py  check_type_safety.py  code_health_check.py  collect_metrics.py  duplication_check.py  guardrails_check.py  report_metrics.py  srp_check.py  test_impact_analysis.py  verify_behavioral_pairing.py  verify_integration_pairing.py
scripts/hooks/: check_bare_excepts.py
src/: main.py
tests/: conftest.py
tests/unit/: test_example.py  test_main.py
