[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "toy"
version = "0.1.0"
description = "Toy project"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# =============================================================================
# pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Fast, isolated unit tests (no I/O)",
    "integration: Tests with real I/O (database, network)",
    "behavioral: End-to-end behavioral tests",
    "slow: Tests that take longer than 1 second",
]

# =============================================================================
# Coverage configuration
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/migrations/*",
]
branch = true

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# =============================================================================
# Ruff (linting + formatting)
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "ANN",  # flake8-annotations (type hints)
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "S101",    # Use of assert (ok in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# =============================================================================
# Mypy (type checking)
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["venv/", ".venv/", "dist/"]
